# real-estate-scrapper

./: .env.example  .flake8  .gitignore  LICENSE  README.md  pylintrc  pyproject.toml  requirements.txt  runner.py  scrapper.py  scrapy.cfg  setup.py
olx/: items.py  middlewares.py  pipelines.py  settings.py
olx/spiders/: items.py  loaders.py  pipelines.py  properties.py
olx/spiders/properties/: sell.py
olx/spiders/sell/: loaders.py  properties.py
scrapper/: olx.py
